# practice-japanese-cat-gpts

./: README.md  pyproject.toml
practice/: abeja-gpt-neox-japanese-2-7b.py  abeja-gpt2-large-japanese.py  cyberagent-open-calm-1b.py  cyberagent-open-calm-3b.py  cyberagent-open-calm-7b.py  line-corporation-japanese-large-lm-1-7b-instruction-sft.py  line-corporation-japanese-large-lm-3-6b-instruction-sft.py  rinna-japanese-gpt-neox-instruction-ppo.py  rinna-japanese-gpt-neox-instruction-sft-v2.py  rinna-japanese-gpt2-xsmall.py  tanrei-gptsan-japanese.py  yellowback-gpt-neo-japanese-1-3b.py
