[tool.poetry]
name = "practice"
version = "0.1.0"
description = ""
authors = ["Neos21 <neos21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.4.0"
transformers = "^4.44.0"
accelerate = "^0.33.0"
sentencepiece = "^0.2.0"
protobuf = "^5.27.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
